@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2003/09/08 00:33:18 hubertf Exp $
+$NetBSD: distinfo,v 1.2 2004/01/02 01:19:14 hubertf Exp $
 
-SHA1 (nicotine-1.0.3.tar.bz2) = 97971da3b4534e5e01babafe3bf047391b1eecda
-Size (nicotine-1.0.3.tar.bz2) = 153311 bytes
+SHA1 (nicotine-1.0.6.tar.bz2) = b7278d571140a2e22c088ef74384c8285a9b0558
+Size (nicotine-1.0.6.tar.bz2) = 277777 bytes
